FindBugs told me to replace "new Long()" calls.
git-svn-id: file:///Users/andrewregan/Development/SVN/repos/trunk/Bloggers4Labour@124 aa2b285a-0eb0-49ca-9bdb-c93b1c50f45f